--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <script src="./main.js"></script>
 </head>
 <body>
-    <div id="circle"></div>
+    <div id="moving-circle"></div>
 </body>
 </html>
